@@ -1,11 +1,13 @@
+DIST renderdoc-1.10.tar.gz 43023048 SHA256 6200099987c7cfc52360d24845742883dcfe6cb31b71c6f85372a543a9608486 SHA512 181934d5eac179451e0e9e708960d119b33184ba6ab81db504144709ecb47e8abb8543d3f32267ba3804751613bc7003480e2eab7b66af63aeb4b2b1329f3cbf WHIRLPOOL 6ec8694b6f0973a78a2142621490e6a6b638d9ec1d7d6202efb1a219e495fbfbf9003c37ca690fe2d21544c775cc7b089dbe2cf37f3f713537fc268a12ced1b9
 DIST renderdoc-1.5.tar.gz 42153749 SHA256 add9d6af2f2fe3884cc813f5ee613acec4f2ffc10ccee67cd8d1e3de83537e29 SHA512 771d406a7a946a8ff34f1466feaf33ec0271f48d4ba06b37c59e011ffaaede3b8f608c8de4145b3a40259d643f33041f721f5aadaffefbe5ae5116399485049d WHIRLPOOL 31f94efa9853ab58e7c0f420214ff1a4d8e4928dcb21d28a6d3269d7a192e024b95877991aad01e7b800294df9a7992658993d88f5cb12100ad57e9e98b87937
 DIST renderdoc-1.8.tar.gz 42732744 SHA256 a5e046720b48c12f3b448936ecf3a4e29a28231348bf024db29e29499d306ef5 SHA512 5206642ae229664591a253180b7e0f1539a18c89ddef7778dbf93a9a6a86b88c8108da50311eda1b0d77f773a6546f87ab607406911dbea93d94763c3cd351f9 WHIRLPOOL bfd6b9fc9e57fced61ba565c9ad4183b18f466e97965672861297a747940b7c5efeaedfa70dbccb8d42b190a89d28c7cc29ce6c49757780dc506a99f8504b68f
 DIST renderdoc-1.9.tar.gz 42972793 SHA256 e95456292b95772c729af6988cf0a5b48ba1d915be8be63ecdc4203407b66a95 SHA512 0f0ef0a630c1cef4b6673272a97ffa738a7f4f0570343f81b6f89ba8cda591e844d69f96e6c76ecfdc2d3a2de477a2b74c0ba39f0e04f165a741f84f5301bc32 WHIRLPOOL aa7929fb17b8aa715b2c7328a3652b462ba2e811829502ae7a270e68092fac9aa9609c23bc99e0a17e6c430c5ce07dcdf3cb777792dd84377e19a3685cd37dc7
 DIST renderdoc_swig_modified-6.zip 6015826 SHA256 c486b9f4fa537b00085890f592ffa5aa4be75153a701f8602105b0f2af1d46d9 SHA512 380760fcd4ec6fe3f2571ac0ce84c8cbd60a413ee5b7679beed4a87dc78ca6a3eef5932d8198476e81bbb04d2b10bfacfb7b94c0508cfaeb358f4033c7b58376 WHIRLPOOL c55a5d367ed2a66a55d472392c52ca3f44dae8c6e604e281272a68871c22fda9f4c4880989eac067e0bfcda7d27917e0f292223fdf7bf2477f30c71f332a724a
 DIST renderdoc_swig_modified-7.zip 6015823 SHA256 9d7e5013ada6c42ec95ab167a34db52c1cc8c09b89c8e9373631b1f10596c648 SHA512 78e66e7da0a6632a0f1e6ca0b38b7331fac8921b0d82d42ec21b281f19ff1c9b1ea182c80c52585dceef2e7444777340eedcbda80ac05563da8b892b446f9596 WHIRLPOOL f76ed018f761ff13053c6e6045f9dde374761cd278b502a0b403b7024b17e39c32cb481fe366f90c0a7fc9114b7dc721278bdb5488f0fa4b2dede443dc5771b9
+EBUILD renderdoc-1.10.ebuild 1258 SHA256 726243def2f704cb336d5c7f986d952e61bc567bfbce67c910ac2a14b5b51b70 SHA512 31b8c4e096a86455ce0e56cea20cc001d9fc42f36bf8488556966e713095549cfc1a04e6c6b469ad31221fe8af545d21f024d56d77967d90cccdb8c14f15e227 WHIRLPOOL a77fdec38443f0e0e0da897e5d7e6c1732b5cfc6649771b3c6ad9072efe980bf20ddade3a649d4574bf25c7d336e6d81a4f493aa33359ca438c9c95ae1961abb
 EBUILD renderdoc-1.5-r1.ebuild 1299 SHA256 e12d82b362aff25dd9c77c1cb7bc66f3852b49d8c0792000188eb33462641dcc SHA512 8afd56b9be2662a8c74aaa7ac11cf3ebd3ee7616da7835ec337dae2f3ede7056e53ce584a52791bac5321208cbbc8bd4c4103546e5fec599e959f94afa302faf WHIRLPOOL 95ad04a30b9346b31940b0ea9a68946c215bb20c8a46639f4c7a9f7654fe0528bf9fa701ffc484f87a778f67943d5d2953726cd2e81b31a457650f5da6affc1c
 EBUILD renderdoc-1.8.ebuild 1300 SHA256 a9a581526df157a14e5ffcfdc3df6aa40fc26d94ac70b4c4e4eb82f60090e100 SHA512 87460d4c992b187390e79bc23e57713670d0ede90e9512ec63bb5edc35dd413cf30120049b7f478a0828e01c642df5ea1dd58ad7c3d1b1fa4c440b2b9d8f6ca0 WHIRLPOOL 6f51488b0d979242dcbd529aac4a1b625fffaefbff99089a4ccf2c04fd9015c1959896ff315e0562cc2334f4507d96bc7afb5f7528a7b554de71fd048349d0d1
 EBUILD renderdoc-1.9.ebuild 1300 SHA256 a9a581526df157a14e5ffcfdc3df6aa40fc26d94ac70b4c4e4eb82f60090e100 SHA512 87460d4c992b187390e79bc23e57713670d0ede90e9512ec63bb5edc35dd413cf30120049b7f478a0828e01c642df5ea1dd58ad7c3d1b1fa4c440b2b9d8f6ca0 WHIRLPOOL 6f51488b0d979242dcbd529aac4a1b625fffaefbff99089a4ccf2c04fd9015c1959896ff315e0562cc2334f4507d96bc7afb5f7528a7b554de71fd048349d0d1
 EBUILD renderdoc-9999.ebuild 1235 SHA256 8d7bf44628447746f53a9a5ba5db8014ad71ef21e147cd0132a113473ab9afd8 SHA512 376ad3782a7a8cced8502ca4956908311bdbd053663324aea4fe3de9ae49193c5772174984fbd80024395170ecc36244dad815ea44ec1dbccc052aa0b6088cdc WHIRLPOOL 67a19f2a1d9421547db7e02d0a326584925cc7ac7753350b418bc273890f756c90c49b7008ada6505bd4c3756d1f249823174693ce0a93e9198a364a333f551b
-MISC ChangeLog 1581 SHA256 a8e389a8a198ae6cb737f1cfa9010f75b18077acb7da9fe30267ee30ea685ce7 SHA512 ee5e321aa2bf4db2e8fb90085e4e8760b962f9ffebc4f5c3c833537748d771175a38fa13d0ae8709da5d85ec14bd82bb769e81891a013825ee8b61b239bc4cb0 WHIRLPOOL b88f864ebff8792904733198b9abfc4ea6a5eb5fc8ac7d133c8815599a45c535f63978cf47cf15a7fabca1c6a2ea18adecd9ed514f07caedee070e75ec164018
+MISC ChangeLog 1757 SHA256 de25fe1fd288cfd39ace44bfb3709edb76b5c2e8d6265d7c15fe50af5084723f SHA512 b19b2613cc5ab1c4e1cbda64f20a79bdc8556b664acaa6b219248625623361dee2b7a22d6e42b83aa2e2ba73a8810fb29d73501776553806154ca2e0ebb81bb6 WHIRLPOOL 2bee8429f8ef3a504ae6bc271709f771e56edaeb3a1c06e5f4300d6905aee1220de6e6aa6849096fed1e83208c3edb95b474ebaf90c907f2d9fb72a81ecfe80d
 MISC metadata.xml 617 SHA256 e9fbacbe415bc07df43e7f8e712ab879f7cdd471e7fb8eca804494103418b8fc SHA512 4cad8316dce107b2cd7e7eb426a106388563955c5ba333b1fcb024c4265c0d7b2fca78dcb2abdfd737fb8fe06066af22a3fec7d0db66870ba2f6739e7b9bea77 WHIRLPOOL 094c37a0562e2f09d9998d06d4917b474f599a57804a09300dba83e3fe8d489e4781d2d5924208fccb1bdea866fd42cac7abae9f72083284f24b8bb75e1d5a83
